# hash-graph

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  fgl-ng.cabal  hash-graph.cabal
Data/AbstractGraph/: Class.hs  Partial.hs  Prim.hs  Total.hs
Data/AbstractGraph/Impl/: Function.hs  Hash.hs
Data/HashGraph/: Algorithms.hs  Arbitrary.hs  Strict.hs
Data/HashGraph/Algorithms/: MST.hs
benchmarks/: Benchmark.hs  benchmark.hs  benchmarks.md
doc/: theory.md
examples/: Basic.hs  Courses.hs  Currency.hs  Fgl.hs  Sonic.hs  examples.cabal
profiling/: Profiling.hs
src/Data/Graph/: Inductive.hs
src/Data/Graph/Inductive/: Graph.hs  Strict.hs
src/Data/Graph/Inductive/Impl/: PatriciaTree.hs
src/Data/HashGraph/: Strict.hs
tests/: AbstractTest.hs  Arbitrary.hs  Test.hs  test.hs
tests/Impl/: Function.hs  Hash.hs
