name:                hash-graph
category:            Data
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Patrick Dougherty
maintainer:          Patrick Dougherty <patrick.doc@ameritech.net>
copyright:           Copyright (C) 2017-2018 Patrick Dougherty
cabal-version:       >=1.10
build-type:          Simple
extra-source-files:  ChangeLog.md
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2, GHC == 8.5.*
synopsis:            A hashmap-based graph implementation
description:         
  This package provides an inductive graph representation based upon
  Martin Erwig's original <https://hackage.haskell.org/package/fgl FGL>.
  .
  The <https://github.com/patrickdoc/hash-graph examples> directory contains
  many small demonstrations of how to use the library.

source-repository head
  type:     git
  location: https://github.com/patrickdoc/hash-graph.git

library
  -- exposed-modules:   Data.HashGraph.Strict
  --                    Data.HashGraph.Algorithms
  --                    Data.HashGraph.Algorithms.MST
  exposed-modules:   Data.AbstractGraph.Prim
                     Data.AbstractGraph.Total
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.8 && <4.12
                   , deepseq
                   , hashable
                   , heaps
                   , profunctors
                   , unordered-containers
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Test.hs
  build-depends:     base >=4.8 && <4.12
                   , hash-graph
                   , hspec
                   , QuickCheck
                   , unordered-containers
  ghc-options:       -Wall -with-rtsopts=-K1K

benchmark benchmarks
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    benchmarks
  main-is:           Benchmark.hs
  build-depends:     base >=4.8 && <4.12
                   , criterion
                   , deepseq
                   , fgl
                   , hash-graph
                   , unordered-containers
  ghc-options:       -Wall
