-- Various example programs using hash-graph

name:                examples
version:             0.1.0.0
synopsis:            A collection of hash-graph examples
author:              Patrick Dougherty
maintainer:          patrick.doc@ameritech.net
build-type:          Simple
cabal-version:       >=1.10

flag dump
  description:       Dump core
  default:           False

flag prof
  description:       Enable profiling output
  default:           False

executable courses
  default-language:  Haskell2010
  main-is:           Courses.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.11
                   , hash-graph

  -- -p enables time profile report
  -- -s print profiling data to stderr
  -- -hy graph heap usage by type
  -- -i0.1 set resolution of heap sampling
  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file
