-- Various example programs using hash-graph

name:                examples
version:             0.1.0.0
synopsis:            A collection of hash-graph examples
author:              Patrick Dougherty
maintainer:          patrick.doc@ameritech.net
build-type:          Simple
cabal-version:       >=1.10

flag dump
  description:       Dump core
  default:           False

flag prof
  description:       Enable profiling output
  default:           False

executable basic
  default-language:  Haskell2010
  main-is:           Basic.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.12
                   , hash-graph

  -- -p enables time profile report
  -- -s print profiling data to stderr
  -- -hy graph heap usage by type
  -- -i0.1 set resolution of heap sampling
  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file

executable courses
  default-language:  Haskell2010
  main-is:           Courses.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.12
                   , hash-graph

  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file

executable currency
  default-language:  Haskell2010
  main-is:           Currency.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.12
                   , hash-graph
                   , safe-money

  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file

executable fgl
  default-language:  Haskell2010
  main-is:           Fgl.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.12
                   , hash-graph
                   , unordered-containers

  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file

executable sonic
  default-language:  Haskell2010
  main-is:           Sonic.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.10 && <4.12
                   , hash-graph
                   , unordered-containers

  if flag(prof)
    ghc-options:     "-with-rtsopts=-p -s -hy -i0.1"

  if flag(dump)
    ghc-options:     -ddump-simpl -dsuppress-all -ddump-to-file
